[gd_scene load_steps=20 format=3 uid="uid://bqscglixmr4bd"]

[ext_resource type="Script" path="res://addons/dialogue_nodes/editor/editor.gd" id="1_3rdab"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/editor/characters.gd" id="1_k6kh1"]
[ext_resource type="Texture2D" uid="uid://cf5ef41yo6jl6" path="res://addons/dialogue_nodes/icons/Reload.svg" id="2_1rash"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/editor/files.gd" id="2_7c672"]
[ext_resource type="Texture2D" uid="uid://buayifvickq2l" path="res://addons/dialogue_nodes/icons/Folder.svg" id="3_lyina"]
[ext_resource type="Texture2D" uid="uid://cc1ufhyvste6m" path="res://addons/dialogue_nodes/icons/Forward.svg" id="5_x76rf"]
[ext_resource type="Texture2D" uid="uid://bnlg07ckbg0w" path="res://addons/dialogue_nodes/icons/Back.svg" id="6_onucw"]
[ext_resource type="FontFile" uid="uid://dv4rnn0ml62q3" path="res://addons/dialogue_nodes/themes/Poppins-Bold.ttf" id="8_bfbn1"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="8_njjsn"]
[ext_resource type="FontFile" uid="uid://bhtf12vvs2yjq" path="res://addons/dialogue_nodes/themes/Poppins-BoldItalic.ttf" id="9_wsvtm"]
[ext_resource type="FontFile" uid="uid://bcg26eik2m2o8" path="res://addons/dialogue_nodes/themes/Poppins-Italic.ttf" id="10_ffgcm"]
[ext_resource type="FontFile" uid="uid://b1bq3eoec0j1b" path="res://addons/dialogue_nodes/themes/Poppins-Regular.ttf" id="11_4inri"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeMatrix.gd" id="11_8juv3"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="12_c8yxi"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="13_debg3"]

[sub_resource type="Theme" id="Theme_iaxpe"]
default_font = ExtResource("8_bfbn1")
RichTextLabel/fonts/bold_font = ExtResource("8_bfbn1")
RichTextLabel/fonts/bold_italics_font = ExtResource("9_wsvtm")
RichTextLabel/fonts/italics_font = ExtResource("10_ffgcm")
RichTextLabel/fonts/normal_font = ExtResource("11_4inri")

[sub_resource type="RichTextEffect" id="RichTextEffect_ogokn"]
script = ExtResource("12_c8yxi")

[sub_resource type="RichTextEffect" id="RichTextEffect_w8v0c"]
script = ExtResource("13_debg3")

[sub_resource type="RichTextEffect" id="RichTextEffect_vxsx5"]
script = ExtResource("11_8juv3")

[node name="Editor" type="Control"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_3rdab")

[node name="Main" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_right = -4.0
size_flags_vertical = 3

[node name="ToolBar" type="HBoxContainer" parent="Main"]
layout_mode = 2

[node name="FileMenu" type="MenuButton" parent="Main/ToolBar"]
layout_mode = 2
keep_pressed_outside = true
text = "File"
switch_on_hover = true
item_count = 8
popup/item_0/text = "New Tree"
popup/item_0/id = 0
popup/item_1/text = "Open..."
popup/item_1/id = 1
popup/item_2/text = ""
popup/item_2/id = 6
popup/item_2/separator = true
popup/item_3/text = "Save"
popup/item_3/id = 2
popup/item_4/text = "Save As"
popup/item_4/id = 3
popup/item_5/text = ""
popup/item_5/id = 7
popup/item_5/separator = true
popup/item_6/text = "Close"
popup/item_6/id = 4
popup/item_7/text = "Close All"
popup/item_7/id = 5

[node name="AddMenu" type="MenuButton" parent="Main/ToolBar"]
visible = false
layout_mode = 2
keep_pressed_outside = true
text = "Add Node"
switch_on_hover = true
item_count = 6
popup/item_0/text = "StartNode"
popup/item_0/id = 0
popup/item_1/text = "DialogueNode"
popup/item_1/id = 1
popup/item_2/text = "CommentNode"
popup/item_2/id = 2
popup/item_3/text = "SignalNode"
popup/item_3/id = 3
popup/item_4/text = "SetNode"
popup/item_4/id = 4
popup/item_5/text = "ConditionNode"
popup/item_5/id = 5

[node name="RunMenu" type="MenuButton" parent="Main/ToolBar"]
visible = false
layout_mode = 2
keep_pressed_outside = true
text = "Run"
switch_on_hover = true

[node name="DebugMenu" type="MenuButton" parent="Main/ToolBar"]
layout_mode = 2
focus_mode = 2
keep_pressed_outside = true
text = "Debug"
switch_on_hover = true
item_count = 1
popup/item_0/text = "Print Debug Messages"
popup/item_0/checkable = 1
popup/item_0/id = 0

[node name="Workspace" type="HSplitContainer" parent="Main"]
layout_mode = 2
size_flags_vertical = 3

[node name="SidePanel" type="VSplitContainer" parent="Main/Workspace"]
clip_contents = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Files" type="ItemList" parent="Main/Workspace/SidePanel" node_paths=PackedStringArray("editor", "workspace", "data_container")]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
allow_rmb_select = true
script = ExtResource("2_7c672")
editor = NodePath("../../../..")
workspace = NodePath("../..")
data_container = NodePath("../Data")

[node name="PopupMenu" type="PopupMenu" parent="Main/Workspace/SidePanel/Files"]
item_count = 4
item_0/text = "Save"
item_0/id = 0
item_1/text = "Save As"
item_1/id = 1
item_2/text = "Close"
item_2/id = 2
item_3/text = "Close All"
item_3/id = 3

[node name="NewDialog" type="FileDialog" parent="Main/Workspace/SidePanel/Files"]
title = "Create a file"
size = Vector2i(600, 400)
mode_overrides_title = false
filters = PackedStringArray("*.tres; Dialogue File")

[node name="OpenDialog" type="FileDialog" parent="Main/Workspace/SidePanel/Files"]
title = "Open a file"
size = Vector2i(600, 400)
ok_button_text = "Open"
mode_overrides_title = false
file_mode = 0
filters = PackedStringArray("*.tres; Dialogue File")

[node name="SaveDialog" type="FileDialog" parent="Main/Workspace/SidePanel/Files"]
title = "Save a file"
size = Vector2i(600, 400)
mode_overrides_title = false
filters = PackedStringArray("*.tres; Dialogue File")

[node name="ConfirmationDialog" type="AcceptDialog" parent="Main/Workspace/SidePanel/Files"]
position = Vector2i(0, 24)
size = Vector2i(400, 109)
dialog_text = "The file/s contains unsaved changes. Are you sure you want to close the file/s?"
dialog_autowrap = true

[node name="Data" type="VBoxContainer" parent="Main/Workspace/SidePanel"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Characters" type="VBoxContainer" parent="Main/Workspace/SidePanel/Data"]
layout_mode = 2
script = ExtResource("1_k6kh1")
editor_path = NodePath("../../../../..")

[node name="Title" type="Label" parent="Main/Workspace/SidePanel/Data/Characters"]
layout_mode = 2
text = "Characters"

[node name="HBoxContainer" type="HBoxContainer" parent="Main/Workspace/SidePanel/Data/Characters"]
layout_mode = 2

[node name="ResetButton" type="Button" parent="Main/Workspace/SidePanel/Data/Characters/HBoxContainer"]
visible = false
layout_mode = 2
icon = ExtResource("2_1rash")
flat = true

[node name="FilePath" type="TextEdit" parent="Main/Workspace/SidePanel/Data/Characters/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
scroll_fit_content_height = true

[node name="LoadButton" type="Button" parent="Main/Workspace/SidePanel/Data/Characters/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_lyina")

[node name="OpenDialog" type="FileDialog" parent="Main/Workspace/SidePanel/Data/Characters"]
title = "Open a File"
initial_position = 1
size = Vector2i(600, 400)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tres; Character resource")

[node name="Statusbar" type="HBoxContainer" parent="Main"]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2

[node name="PanelToggle" type="TextureButton" parent="Main/Statusbar"]
layout_mode = 2
toggle_mode = true
button_pressed = true
texture_normal = ExtResource("5_x76rf")
texture_pressed = ExtResource("6_onucw")
stretch_mode = 3

[node name="VersionNumber" type="LinkButton" parent="Main/Statusbar"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.533333, 0.533333, 0.533333, 1)
text = "1.1.0"
underline = 1

[node name="DialogueBackground" type="Panel" parent="."]
visible = false
modulate = Color(0, 0, 0, 0.501961)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueBox" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -128.0
offset_right = 400.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_iaxpe")
script = ExtResource("8_njjsn")
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_ogokn"), SubResource("RichTextEffect_w8v0c"), SubResource("RichTextEffect_vxsx5")])

[connection signal="about_to_popup" from="Main/ToolBar/RunMenu" to="." method="_on_run_menu_about_to_popup"]
[connection signal="empty_clicked" from="Main/Workspace/SidePanel/Files" to="Main/Workspace/SidePanel/Files" method="_on_empty_clicked"]
[connection signal="file_list_changed" from="Main/Workspace/SidePanel/Files" to="." method="_on_files_changed"]
[connection signal="file_switched" from="Main/Workspace/SidePanel/Files" to="." method="_on_files_changed"]
[connection signal="item_clicked" from="Main/Workspace/SidePanel/Files" to="Main/Workspace/SidePanel/Files" method="_on_item_clicked"]
[connection signal="item_selected" from="Main/Workspace/SidePanel/Files" to="Main/Workspace/SidePanel/Files" method="_on_file_selected"]
[connection signal="id_pressed" from="Main/Workspace/SidePanel/Files/PopupMenu" to="Main/Workspace/SidePanel/Files" method="_on_popup_menu_pressed"]
[connection signal="file_selected" from="Main/Workspace/SidePanel/Files/NewDialog" to="Main/Workspace/SidePanel/Files" method="new_file"]
[connection signal="file_selected" from="Main/Workspace/SidePanel/Files/OpenDialog" to="Main/Workspace/SidePanel/Files" method="open_file"]
[connection signal="file_selected" from="Main/Workspace/SidePanel/Files/SaveDialog" to="Main/Workspace/SidePanel/Files" method="save_as"]
[connection signal="canceled" from="Main/Workspace/SidePanel/Files/ConfirmationDialog" to="Main/Workspace/SidePanel/Files" method="_on_confirm_dialog_canceled"]
[connection signal="custom_action" from="Main/Workspace/SidePanel/Files/ConfirmationDialog" to="Main/Workspace/SidePanel/Files" method="_on_confirm_dialog_action"]
[connection signal="pressed" from="Main/Workspace/SidePanel/Data/Characters/HBoxContainer/ResetButton" to="Main/Workspace/SidePanel/Data/Characters" method="_on_reset_button_pressed"]
[connection signal="text_changed" from="Main/Workspace/SidePanel/Data/Characters/HBoxContainer/FilePath" to="Main/Workspace/SidePanel/Data/Characters" method="_on_file_path_text_changed"]
[connection signal="pressed" from="Main/Workspace/SidePanel/Data/Characters/HBoxContainer/LoadButton" to="Main/Workspace/SidePanel/Data/Characters" method="_on_load_button_pressed"]
[connection signal="file_selected" from="Main/Workspace/SidePanel/Data/Characters/OpenDialog" to="Main/Workspace/SidePanel/Data/Characters" method="_on_file_selected"]
[connection signal="pressed" from="Main/Statusbar/PanelToggle" to="." method="_on_files_toggle_button_pressed"]
[connection signal="pressed" from="Main/Statusbar/VersionNumber" to="." method="_on_version_number_pressed"]
[connection signal="gui_input" from="DialogueBackground" to="." method="_on_dialogue_background_input"]
